# wg-discord

./: .env  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  config.py  discord_wireguard.py  docker-compose.yml  noxfile.py  pyproject.toml  wg_control.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/discord_wireguard/: __main__.py  config.py  tunnel_manager.py  wg_control.py
src/wg_discord/: __main__.py  config.py  settings.py  tunnel_manager.py  wg_control.py
tests/: conftest.py  test.env  test_config.py
