[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true

[tool.black]
line-length = 88
skip-magic-trailing-comma = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.poetry]
name = "wg-discord"
version = "0.0.1"
description = ""
license = "AGPL-3"
authors = ["Alex Massi"]
readme = "README.md"
packages = [{include = "wg_discord", from = "src"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hikari = "^2.0.0.dev115"
hikari-lightbulb = "^2.3.1"
wgconfig = "^0.3.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-deprecated = "^2.0.1"
flake8-executable = "^2.1.2"
bandit = {extras = ["toml"], version = "^1.7.4"}
isort = "^5.11.4"
setuptools = "^67.6.1"
